--- a/src/Row.css
+++ b/src/Row.css
@@ -1,5 +1,11 @@
 .row_posters {
     display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+}
+
+.row_posters::-webkit-scrollbar {
+    display: none;
 }
 
 /* testing new push again, once more */
@@ -7,5 +13,20 @@
 .row_poster {
     object-fit: contain;
     width: 100%;
+    max-height: 100px;
+    margin: 5px;
+    padding: 5px;
+    transition: transform 300ms;
+}
+
+.row_poster:hover {
+    transform: scale(1.08);
+}
+
+.row_posterLarge {
     max-height: 250px;
+}
+
+.row_posterLarge:hover {
+    max-height: scale(1.09);
 }
