--- a/src/Row.css
+++ b/src/Row.css
@@ -1,7 +1,14 @@
+.row {
+    padding-top: 10px;
+    color: white;
+    margin-left: 20px;
+}
 .row_posters {
+    width: 100%;
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
+    
 }
 
 .row_posters::-webkit-scrollbar {
